# VEE

./: .gitignore  1__mainpage_8dox.html  2__about_8dox.html  3__architecture_8dox.html  3__comparison_8dox.html  4__architecture_8dox.html  4__arduino__api_8dox.html  4__comparison_8dox.html  5__arduino__api_8dox.html  5__student__guide_8dox.html  6__student__guide_8dox.html  6__teacher__guide_8dox.html  7__extending_8dox.html  7__teacher__guide_8dox.html  8__conclusion_8dox.html  8__extending_8dox.html  9__conclusion_8dox.html  CHANGELOG.md  CMakeLists.txt  INSTALL  Makefile  README  README.md  TODO.txt  ____init_____8py.html  ____init_____8py_source.html  _page__about_the_project.html  _page__architecture.html  _page__arduino_a_p_i.html  _page__extending.html  _page__introduction.html  _page__student_guide.html  _page__teacher_guide.html  about_8dox.html  annotated.html  architecture_8dox.html  arduino_8h.html  arduino_8h__dep__incl.map  arduino_8h__dep__incl.md5  arduino_8h__incl.map  (+475 more)
_layouts/: default.html
ardulator/: LICENSE  Makefile  student.cc
ardulator/ext/: clock_gettime.c
ardulator/include/: arduino_api.h  pins_arduino.h  private_config.h  time_defs.h
ardulator/src/: arduino.cc  ardulator.cpp  hardware-serial.cpp  hardware_serial.cc  hardware_serial.cpp  input_types.cc  interupt_commands.cc  main.cc  pin-commands.cpp  pin.cc  pin_commands.cc  pin_commands.cpp  private_config.cc  private_config.cpp  private_config.h  problem.cpp  problem.h  rand_num.cc  signal.cc  time_commands.cc  timing.cc  timing.cpp
ardulator/t/: fail.scn  harness.pl  one.scn  (+1 more)
design/: High Level Designs.graffle
docs/: Doxyfile.cfg.in  DoxygenLayout.xml  High Level Designs.graffle  architecture.gv  basic_ui.ui  high_level_design.txt  introduction.dox  results_ui.ui  styles.sty  update_names.sh  vee.dox
include/: arduino.h  ardulator.h
resources/: configuration_ui.ui  results_ui.ui
search/: all_32.html  all_34.html  all_35.html  all_38.html  all_39.html  all_5f.html  all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_68.html  all_69.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_77.html  all_78.html  all_7e.html  classes_61.html  classes_62.html  classes_63.html  classes_64.html  classes_65.html  classes_68.html  classes_6d.html  classes_70.html  classes_72.html  classes_73.html  classes_75.html  classes_76.html  defines_5f.html  (+87 more)
site/: config.yaml  parse-file.pl  sample-output.txt  site.pl  test_1.txt
src/: arduino.cc  ardulator.cc  bit_value.cc  emulator_commands.cc  env.cc  hardware_serial.cc  interface.cc  interrupt_commands.cc  main.cc  pin_commands.cc  pin_config.cc  power_commands.cc  private_config.cc  rand_num.cc  signal.cc  time_commands.cc  vee-cmd.py  vee-gui.py
t/: fail.scn  harness.pl  one.scn  simple.scn  stuff.t  tests.pl  three.scn
templates/: Makefile  student-polling-lab1.cc  student.cc  t10.scn  t12.scn  t3.scn  t5.scn  t6.scn  t7.scn  t8.scn
test/: run_all_tests.py  test.cfg  test2.cfg  test_deterministic.py  test_failure.py
tools/: analog_viewer.py  cpplint.py
vee/: __init__.py  arduino.py  ardulator.py  signals.py
(+98 files in other folders)
